# mprpc

example/: friend.proto
example/caller/: CMakeLists.txt  callfriendservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  rpcprovider.h  zookeeperutil.h
